--- a/blocks/statistics/statistics.css
+++ b/blocks/statistics/statistics.css
@@ -196,8 +196,8 @@
 
 @media (width<=992px) {
     .statistics-description-wrapper {
-        padding: 40px 0;
-         margin-bottom: 40px;
+        padding: 28px 0;
+         margin-bottom: 28px;
 
     }
     
