--- a/blocks/textmediablock/textmediablock.css
+++ b/blocks/textmediablock/textmediablock.css
@@ -63,7 +63,7 @@
     gap: 24px;
   }
   .textmediablock-wrapper{
-      margin: 44px 0;
+      margin: 28px 0;
   }
   .textmediablock-container>div:first-child{
   margin-bottom: 24px
